# CMake_Test_Runner

./: README.md  run_test.cmake
example/: A.cpp  B.java  C.cpp  CMakeLists.txt
example/tests_files/: input_file.txt
